# Attesta-protocol-frontend

./: .gitignore  CHANGELOG.md  ISSUES.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
prover/: Cargo.toml
prover/src/: lib.rs
scripts/: build-prover.mjs
src/: App.tsx  index.css
src/components/: Card.tsx  DisclosureSummary.tsx  Layout.tsx  PageHeader.tsx  RequireVault.tsx  VaultBackup.tsx  WalletButton.tsx
src/context/: VaultContext.tsx
src/lib/: chain.ts  crypto.test.ts  crypto.ts  csv.test.ts  csv.ts  freighter.ts  keys.test.ts  keys.ts  notes.test.ts  notes.ts  scan.bench.test.ts  wallet.test.ts  wallet.ts
src/lib/prover/: index.ts  predicates.test.ts  predicates.ts  types.ts  worker.ts
src/lib/prover/__snapshots__/: predicates.test.ts.snap
src/pages/: AttestationWallet.tsx  AuditorPortal.tsx  PayReceive.tsx  PayrollConsole.tsx  Playground.tsx
